<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/watchThirtyImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="30"
        android:src="@drawable/theme1_watch"
        android:contentDescription="@string/watch_description" />

    <ImageView
        android:id="@+id/watchSixtyImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="60"
        android:src="@drawable/theme1_watch"
        android:contentDescription="@string/watch_description" />

    <ImageView
        android:id="@+id/watchZeroImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/watch_description"
        android:src="@drawable/theme1_watch" />

    <ImageView
        android:id="@+id/secondMoverImageView"
        android:layout_width="@dimen/neon_bg_second_mover_icon_width"
        android:layout_height="@dimen/neon_bg_second_mover_icon_height"
        android:layout_centerHorizontal="true"
        android:src="@drawable/theme1_neon_bg"
        android:contentDescription="@string/second_mover_description" />

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="@dimen/date_layout_width"
        android:layout_height="@dimen/date_layout_height"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/date_layout_marginTop"
        android:layout_marginBottom="@dimen/date_layout_marginBottom">

        <TextView
            android:id="@+id/monthTextView"
            android:layout_width="@dimen/date_layout_month_column_width"
            android:layout_height="match_parent"
            android:text="@string/default_month_label"
            android:textSize="15dp"
            android:textColor="@color/white_primary_color"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/weekDayTextView"
            android:layout_width="@dimen/date_layout_week_day_column_width"
            android:layout_height="match_parent"
            android:text="@string/default_week_day_label"
            android:textSize="15dp"
            android:textColor="@color/white_primary_color"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clock"
        android:layout_width="@dimen/time_layout_width"
        android:layout_height="@dimen/time_layout_height"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/hourTextView"
            android:layout_width="@dimen/time_layout_column_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/time_layout_hour_group_marginEnd"
            android:gravity="center"
            android:text="@string/default_hour_label"
            android:textAlignment="center"
            android:textColor="@color/white_primary_color"
            android:fontFamily="@font/minaeff_style"
            android:scaleX="1.1"
            android:scaleY="1.3"
            android:textSize="60dp" />

        <LinearLayout
            android:layout_width="@dimen/time_layout_column_width"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/time_layout_hour_group_marginEnd">

            <TextView
                android:id="@+id/minuteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/time_layout_minute_height"
                android:text="@string/default_minute_label"
                android:textAlignment="center"
                android:textSize="40dp"
                android:fontFamily="@font/minaeff_style"
                android:scaleY="1.5"
                android:scaleX="1.5"
                android:textColor="@color/white_primary_color"
                android:gravity="center|fill_vertical" />

            <TextView
                android:id="@+id/secondTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/time_layout_second_height"
                android:text="@string/default_second_label"
                android:textAlignment="center"
                android:textSize="20dp"
                android:fontFamily="@font/minaeff_style"
                android:scaleY="1.5"
                android:scaleX="1.5"
                android:layout_marginTop="@dimen/time_layout_second_marginTop"
                android:textColor="@color/white_primary_color"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>